<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.ledbackbackremote.model.RemoteControlViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RemoteControlActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8pt"
            android:paddingTop="8pt"
            android:paddingRight="8pt">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/brightnessTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjust_brightness"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/brightnessDownButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onBrightnessDown"
                        android:text="-" />

                    <Button
                        android:id="@+id/brightnessUpButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onBrightnessUp"
                        android:text="+" />
                </LinearLayout>

                <TextView
                    android:id="@+id/contentTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bp_content_title"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/textContentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onChooseContentText"
                        android:text="@string/bp_content_text_button" />

                    <Button
                        android:id="@+id/spriteContentButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onChooseContentSprite"
                        android:text="@string/bp_content_sprite_button" />
                </LinearLayout>

                <TextView
                    android:id="@+id/chooseSpriteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_sprite_title"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/prevSpriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onPrevSprite"
                        android:text="@string/prev_sprite_button" />

                    <Button
                        android:id="@+id/nextSpriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onNextSprite"
                        android:text="@string/next_sprite_button" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_custom_text_title"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="299dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onEnterText"
                        android:text="@string/enter_custom_button_title" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

